<?xml version="1.0"?>
<package format="2">
  <name>depth_to_scan</name>
  <version>0.2.0</version>
  <description>depth_to_scan</description>
  <maintainer email="yakir@cogniteam.com">yakir huri</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>depth_image_proc</build_depend>
  <build_depend>image_geometry</build_depend>



  

  
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>image_geometry</exec_depend>




  
</package>
